2002-10-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-chars.c (sp_chars_add_element): Signature change
	(sp_chars_show): Ditto

	* src/display/nr-arena-glyphs.c (nr_arena_glyphs_group_add_component): Signature change

	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_new): Set it up
	(nr_rasterfont_unref): Release glyph slots
	(nr_rasterfont_render_glyph_mask): Implement
	(nr_rasterfont_ensure_glyph_slot): New helper

	* src/sp-text.c: Port to new chars signature

	* src/sp-chars.h: Use font instead of typeface

	* src/libnr/nr-gradient.c (nr_lgradient_render_block): Signature change
	(nr_lgradient_renderer_setup): Use generic base class
	(nr_rgradient_renderer_setup): Ditto
	(nr_rgradient_render_block): Signature change

	* src/libnr/nr-render.h: New file

2002-10-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/text-edit.c (sp_text_edit_dialog_update_object): Use libnrtype
	(sp_text_edit_dialog_read_selection): Ditto
	(sp_text_edit_dialog_font_changed): Ditto

	* src/libnrtype/nr-type-directory.h: Implement NRNameList

	* src/libnrtype/nr-type-directory.c (nr_type_directory_lookup_fuzzy): Force lowercase
	(nr_type_directory_family_list_destructor): Implement
	(nr_type_directory_family_list_get): Ditto
	(nr_type_directory_style_list_destructor): Ditto
	(nr_type_directory_style_list_get): Ditto

	* src/widgets/font-selector.c: New file

	* src/widgets/font-selector.h: New file

	* src/libnrtype/nr-rasterfont.c: New file

	* src/libnrtype/nr-rasterfont.h: New file

	* src/libnr/nr-matrix.c (nr_matrix_f_set_scale): Correct signature

	* src/sp-text.c (sp_font_get_glyph_bbox): Use libnrtype
	(sp_font_get_glyph_advance): Ditto
	(sp_font_get_glyph_bbox_lr2tb): Ditto
	(sp_string_calculate_dimensions): Ditto
	(sp_string_set_shape): Ditto

	* src/sp-chars.c (sp_chars_destroy): Use libnrtype
	(sp_chars_bbox): Ditto
	(sp_chars_show): Ditto
	(sp_chars_clear): Ditto
	(sp_chars_add_element): Ditto
	(sp_chars_normalized_bpath): Ditto