@@ -1,3 +1,8 @@
+2002-10-03  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/text-context.c (sp_text_context_root_handler): Allow entering
+	unicode mode by Ctrl-u
+
 2002-10-02  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/sp-chars.c (sp_chars_add_element): Signature change
